--- a/index.html
+++ b/index.html
@@ -676,6 +676,12 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="https://drive.google.com/uc?export=view&id=1beIS73xuuAzurl4d0Cy_obEgvD-i5LlW" alt="">
+                        <p>Modern Javascript ES6 for React JS - UDEMY</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1TjYSdPbjdbEGBbh1NdGFTZmIg-WXMF6i" alt="">
                         <p>HTML5 Tables - UDEMY</p>
                     </div>
