--- a/index.html
+++ b/index.html
@@ -658,6 +658,12 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="https://drive.google.com/uc?export=view&id=1FgCRXp-OqUViaTF4csbH-6A8XYrSl1Np" alt="">
+                        <p>AI for INDIA - Guniess Record Challenge by GUVI</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=15zf5l58p3A5XKC0uDBuIiPYrO-UNwItF" alt="">
                         <p>Cyber Security & Ethical Hacking Workshop using KALI LINUX</p>
                     </div>
