--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1FgCRXp-OqUViaTF4csbH-6A8XYrSl1Np" alt="">
-                        <p>AI for INDIA - Guniess Record Challenge by GUVI</p>
+                        <p>Capgemini Technical Challenge 2020 - Round 2</p>
                     </div>
                 </div>
                 <div class="card">
