--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences</div>
-                    <p>I am very good in creation Outstanding Presentations for both business and technical level contents. I also design attractive UI elements and current working on Full Stack development projects. I have a good experience in both web application and mobile application developments, experienced with <b>Angular, Springboot, Restfull web services, UI stacks, MySQl for sql databases and Firebase for NOSQL databases</b>. I am the project head for my academic project teams and having a best leadership quality with experience in event management for my college and outstanding team management.</p>
+                    <p>I am very good in creation Outstanding Presentations for both business and technical level contents. I also design attractive UI elements and current working on Full Stack development projects. I have a good experience in both web application and mobile application developments, experienced with <b>Angular, Springboot, Restfull web services, UI stacks, MySQl for sql databases and Firebase for NOSQL databases</b>. I am good in problem solving, competetive coding, DataStructures and algorithms. I am the project head for my academic project teams and having a best leadership quality with experience in event management for my college and outstanding team management.</p>
                     <a href="https://www.github.com/gowthamrajk">Read more</a>
                 </div>
                 <div class="column right">
