--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
                 </div>
                 <div>
                     <div style="margin-bottom: 10px; font-weight: bolder;">Some other Technologies i am experienced with are ...</div>
-                    <img class="technology" src="https://img.shields.io/static/v1?style=for-the-badge&message=Algorithms&color=25A162&logo=problem+solving&logoColor=FFFFFF&label=">
-                    <img class="technology" src="https://img.shields.io/static/v1?style=for-the-badge&message=Spring+Boot&color=6DB33F&logo=Spring+Boot&logoColor=FFFFFF&label=">
+                    <img class="technology" src="https://img.shields.io/static/v1?style=for-the-badge&message=Spring+Data+JPA&color=6DB33F&logo=Spring+Boot&logoColor=FFFFFF&label=">
                     <img class="technology" src="https://img.shields.io/static/v1?style=for-the-badge&message=Hibernate&color=59666C&logo=Hibernate&logoColor=FFFFFF&label=">
                     <img class="technology" src="https://img.shields.io/static/v1?style=for-the-badge&message=Angular&color=DD0031&logo=Angular&logoColor=FFFFFF&label=">
                     <img class="technology" src="https://img.shields.io/static/v1?style=for-the-badge&message=JUnit5&color=25A162&logo=JUnit5&logoColor=FFFFFF&label=">
