--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1hL4HbO0NVMovUqZzBsfXEI5cxj_f-Pgg" alt="">
-                        <p>I support Armed forces Flag day</p>
+                        <p>Hackerrank - Problem Solving certification</p>
                     </div>
                 </div>
                 <div class="card">
