--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1NGdvCO82JVFyTxEs7AbJmwOYDcJFnYcy" alt="">
-                        <p>Hackerrank - JAVA Programming (Gold badge)</p>
+                        <p>Hackerrank - SQL (Gold badge)</p>
                     </div>
                 </div>
                 <div class="card">
