--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1NGdvCO82JVFyTxEs7AbJmwOYDcJFnYcy" alt="">
-                        <p>Hackerrank - SQL (Gold badge)</p>
+                        <p>Hackerrank - 30 days of code (Gold badge)</p>
                     </div>
                 </div>
                 <div class="card">
