--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Gowthamraj K</div>
-                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <div class="text-3">I'm a <span class="typing"></span></div>
                 <a href="#contact">Contact me</a>
             </div>
         </div>
