--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                 <div class="column right">
                     <div class="text">I'm Gowthamraj and I'm a <span class="typing-2"></span></div>
                     <p>I am an <font color="darkred"><b>Oracle Certified Java Associate - SE8 JAVA Programmer</font></b>, Ex-President of TECHNICAL CLUBS - SLC (Student Leadership Council), All Rounder of ECE Department (2020 - 2021) and a Software Developer. An Aspiring Engineer passionate to learn new things everyday and create innovative applications. I also help people and guide them in Generating Innovative Ideas to Win State and National Level Project Contests. I am good in creating attractive and topclass UI designs for my Web Applications.</p>
+                    <div style="margin-top: 1%;">
+                        <p><b style="color: darkgreen; font-size: 30px;">></b> <b style="color: navy;">DOB</b> : <b>12.04.2000</b></p>
+                        <p><b style="color: darkgreen; font-size: 30px;">></b> <b style="color: navy;">SSLC</b> : <b style="font-weight: bold;">PKD Matriculation Higher Secondary School </b><b style="color: white; background-color: darkred; margin-left: 2%;padding: 5px 10px 5px 10px; border-radius: 15px;"> 98.8 % </b></p>
+                        <p><b style="color: darkgreen; font-size: 30px;">></b> <b style="color: navy;">HSC</b> : <b style="font-weight: bold;">PKD Matriculation Higher Secondary School </b><b style="color: white; background-color: darkred; margin-left: 2%;padding: 5px 10px 5px 10px; border-radius: 15px;"> 96.08 % </b></p>
+                        <p><b style="color: darkgreen; font-size: 30px;">></b> <b style="color: navy;">B.E ECE</b> : <b style="font-weight: bold;">Sri Eshwar College of Engineering </b><b style="color: white; background-color: darkred; margin-left: 2%;padding: 5px 10px 5px 10px; border-radius: 15px;"> 9.04 CGPA / 10.0 </b></p>
+                    </div>
                     <a href="https://drive.google.com/file/d/1b5nB9bR1b-xkFEr8SjK50-SYvs6P7xQj/view?usp=sharing">Download CV</a>
                 </div>
             </div>
