--- a/index.html
+++ b/index.html
@@ -683,6 +683,12 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="https://drive.google.com/uc?export=view&id=1L9FSPYDYm7JLjTA5bJP41YZo6pTDTWwh" alt="">
+                        <p>Capgemini Technical Challenge 2020 - Round 2</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=15zf5l58p3A5XKC0uDBuIiPYrO-UNwItF" alt="">
                         <p>Cyber Security & Ethical Hacking Workshop using KALI LINUX</p>
                     </div>
