--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
+                <div class="text-1">Hello, I'm</div>
                 <div class="text-2">Gowthamraj K</div>
-                <div class="text-3">I'm a <span class="typing"></span></div>
+                <div class="text-3">and I'm a <span class="typing"></span></div>
                 <a href="#contact">Contact me</a>
             </div>
         </div>
