--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, I'm</div>
+                <div class="text-1">Hello, My name is </div>
                 <div class="text-2">Gowthamraj K</div>
                 <div class="text-3">and I'm a <span class="typing"></span></div>
                 <a href="#contact">Contact me</a>
