--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <div class="text">E-POS Portal</div>
                         <p>You can upload some documents consisting of your bank transaction statements, view your details and get your transcripted statements downloaded as PDF, word, Excel formats.</p>
                         <div class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/E-Pos-Portal'" class="viewbtn">View Repo</button>
-                        <button onclick="window.location='https://drive.google.com/file/d/1EHWvQSf0jRlvo-ezHNlrRR_uqhG0YgJp/view?usp=sharing'" class="demobtn">Demo video</button></div>
+                        <button onclick="window.location='https://youtu.be/Pz7-oqoLJXE'" class="demobtn">Demo video</button></div>
                     </div>
                 </div>
                 <div class="card">
