--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <div class="text">WE - CHAT</div>
                         <p>A web based live group chatting application which can help you to chat with your friends with text, emojies, etc.. you can also invite your friends to join the chat through an invitation mail.</p>
                         <div class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/SpringChattingApplication'" class="viewbtn">View Repo</button>
-                        </div>
+                        <button onclick="window.location='https://youtu.be/Pz7-oqoLJXE'" class="demobtn">Demo video</button></div>
                     </div>
                 </div>
                 <div class="card">
