--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LJkancO2pKU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
-                        <p>Matrix elements - Zig-Zag Patterm printing</p>
+                        <p>E-POS Portal - A web application for Account Statement Transcription</p>
                     </div>
                 </div>
                 <div class="card">
