--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LJkancO2pKU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
-                        <p>Matrix elements - Zig-Zag Patterm printing</p>
+                        <p>WE CHAT - A web based live chatting application</p>
                     </div>
                 </div>
             </div>
