--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                     <div class="box">
                         <div class="col-12 col-sm col-md-auto col-lg-auto">
                             <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LJkancO2pKU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Ejc2Ht_o2qQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <p>WE CHAT - A web based live chatting application</p>
