--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
                     <div class="box">
                         <div class="col-12 col-sm col-md-auto col-lg-auto">
                             <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LJkancO2pKU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pz7-oqoLJXE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <p>E-POS Portal - A web application for Account Statement Transcription</p>
