--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                  <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1JWraO4G_zxjEOji52Pwr8lHr6QQ2O5O-" alt="">
-                        <p>Mastery in JAVA RESTFUL Web Services</p>
+                        <p>Design Thinking Process & Product Development Stratergies</p>
                     </div>
                 </div>
                 <div class="card">
