--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1pidoDhlszoogKbRSxhBmiL0pIojv-Jz9" alt="">
-                        <p>Introduction to Cyber Security - UDEMY</p>
+                        <p>Programming Level - 1 [Rank - 1]</p>
                     </div>
                 </div>
                 <div class="card">
