--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1pidoDhlszoogKbRSxhBmiL0pIojv-Jz9" alt="">
-                        <p>Introduction to Cyber Security - UDEMY</p>
+                        <p>Achiever as 2000+ Bronze Medal in Skillrack</p>
                     </div>
                 </div>
                 <div class="card">
