--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1pidoDhlszoogKbRSxhBmiL0pIojv-Jz9" alt="">
-                        <p>Introduction to Cyber Security - UDEMY</p>
+                        <p>Achiever as 400+ Daily Challenges in skillrack</p>
                     </div>
                 </div>
                 <div class="card">
