--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Ejc2Ht_o2qQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
-                        <p>WE CHAT - A web based live chatting application</p>
+                        <p>GIT FETCH - User Information Provider</p>
                     </div>
                 </div>
             </div>
