--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Ejzi8XbNbcY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
-                        <p>GIT FETCH - User Information Provider</p>
+                        <p>QR Code Generator & Scanner</p>
                     </div>
                 </div>
             </div>
