--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                     <div class="box">
                         <div class="col-12 col-sm col-md-auto col-lg-auto">
                             <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Ejzi8XbNbcY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/e2Qs7L88SBY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <p>QR Code Generator & Scanner</p>
