--- a/index.html
+++ b/index.html
@@ -221,6 +221,15 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="images/chatting.png" alt="">
+                        <div class="text">WE - CHAT</div>
+                        <p>A web based live group chatting application which can help you to chat with your friends with text, emojies, etc.. you can also invite your friends to join the chat through an invitation mail.</p>
+                        <div class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/SpringChattingApplication'" class="viewbtn">View Repo</button>
+                        <button onclick="window.location='https://youtu.be/Ejc2Ht_o2qQ'" class="demobtn">Demo video</button></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="images/ocr.png" alt="">
                         <div class="text">OCR convertor</div>
                         <p>An image to text convertor application which helps you to take pic with camera or upload images from galary and crop them and convert it as text easily. A simple OCR - image to text convertor</p>
