--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="box">
                         <img src="images/chatting.png" alt="">
                         <div class="text">QR Code Generator & Scanner</div>
-                        <p>A web based live group chatting application which can help you to chat with your friends with text, emojies, etc.. you can also invite your friends to join the chat through an invitation mail.</p>
+                        <p>A web based application which can help you to generate your own QR codes, scan QR codes and get the text as well as hyperlink for the decrypted content</p>
                         <div class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/SpringChattingApplication'" class="viewbtn">View Repo</button>
                         <button onclick="window.location='https://youtu.be/Ejc2Ht_o2qQ'" class="demobtn">Demo video</button></div>
                     </div>
