--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <div class="text">QR Code Generator & Scanner</div>
                         <p>A web based application which can help you to generate your own QR codes, scan QR codes and get the text as well as hyperlink for the decrypted content</p>
                         <div class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/QR-GeneratorAndScanner'" class="viewbtn">View Repo</button>
-                        <button onclick="window.location='https://youtu.be/Ejc2Ht_o2qQ'" class="demobtn">Demo video</button></div>
+                        <button onclick="window.location='https://youtu.be/e2Qs7L88SBY'" class="demobtn">Demo video</button></div>
                     </div>
                 </div>
                 <div class="card">
