--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <img src="images/chatting.png" alt="">
                         <div class="text">QR Code Generator & Scanner</div>
                         <p>A web based application which helps you to generate your own QR codes, scan QR codes and get the text & hyperlink of decrypted content</p>
-                        <div class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/QR-GeneratorAndScanner'" class="viewbtn">View Repo</button>
+                        <div class="buttons" button style="margin-top: 20px;" ><button onclick="window.location='https://github.com/gowthamrajk/QR-GeneratorAndScanner'" class="viewbtn">View Repo</button>
                         <button onclick="window.location='https://youtu.be/e2Qs7L88SBY'" class="demobtn">Demo video</button></div>
                     </div>
                 </div>
