--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/chatting.png" alt="">
+                        <img src="images/qrcode.png" alt="">
                         <div class="text">QR Code Generator & Scanner</div>
                         <p>A web based application which helps you to generate your own QR codes, scan QR codes and get the text & hyperlink of decrypted content</p>
                         <div class="buttons" button style="margin-top: 20px;" ><button onclick="window.location='https://github.com/gowthamrajk/QR-GeneratorAndScanner'" class="viewbtn">View Repo</button>
