--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <p><b style="color: darkgreen; font-size: 30px;">></b> <b style="color: navy;">HSC</b> : <b style="font-weight: bold;">PKD Matriculation Higher Secondary School </b><b style="color: white; background-color: darkred; margin-left: 2%;padding: 5px 10px 5px 10px; border-radius: 15px;"> 96.08 % </b></p>
                         <p><b style="color: darkgreen; font-size: 30px;">></b> <b style="color: navy;">B.E ECE</b> : <b style="font-weight: bold;">Sri Eshwar College of Engineering </b><b style="color: white; background-color: darkred; margin-left: 2%;padding: 5px 10px 5px 10px; border-radius: 15px;"> 9.02 CGPA / 10.0 </b></p>
                     </div>
+                    <div style="margin-top: 1%;">
+                        <p style="margin-bottom: 1%; font-weight: bold;">Refer my Leadership skills in my LinkedIn Profile</p>
+                    </div>
                     <a href="https://drive.google.com/file/d/1b5nB9bR1b-xkFEr8SjK50-SYvs6P7xQj/view?usp=sharing">Download CV</a>
                 </div>
             </div>
