--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     <div style="margin-top: 1%;">
                         <p style="margin-bottom: 1%; font-weight: bold;">Refer my Leadership skills in my LinkedIn Profile</p>
                     </div>
+                    <div style="margin-top: 1%;">
+                    </div>
                     <a href="https://drive.google.com/file/d/1b5nB9bR1b-xkFEr8SjK50-SYvs6P7xQj/view?usp=sharing">Download CV</a>
                 </div>
             </div>
