--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div style="margin-top: 1%;">
                         <b style="margin-bottom: 1%;">Work Experience : </b>
-
+                        <p><b style="color: darkgreen; font-size: 25px;">></b> <b style="color: white; background-color: darkgreen; margin-left: 0.5%; margin-right: 1%; padding: 5px 10px 5px 10px; border-radius: 15px;"> present </b> : <b style="font-weight: bold;">Associate Software Engineer - Technology @ Virtusa </b></p>
                     </div>
                     <a href="https://drive.google.com/file/d/1b5nB9bR1b-xkFEr8SjK50-SYvs6P7xQj/view?usp=sharing">Download CV</a>
                 </div>
