--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1beIS73xuuAzurl4d0Cy_obEgvD-i5LlW" alt="">
-                        <p>Modern Javascript ES6 for React JS - UDEMY</p>
+                        <p>BootStrap 4 - UDEMY</p>
                     </div>
                 </div>
                 <div class="card">
