--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/qrcode1.png" alt="">
-                        <div class="text">QR Code Generator & Scanner</div>
+                        <div class="text">QR Code Generator and Scanner</div>
                         <p>A web based application which helps you to generate your own QR codes, scan QR codes and get the text and its hyperlink</p>
                         <div class="buttons" button style="margin-top: 10px;" ><button onclick="window.location='https://github.com/gowthamrajk/QR-GeneratorAndScanner'" class="viewbtn">View Repo</button>
                         <button onclick="window.location='https://youtu.be/e2Qs7L88SBY'" class="demobtn">Demo video</button></div>
