--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                  <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1lhbDyTwlL6PLPSXxyEtAYnIMr5sRaOx-" alt="">
-                        <p>Design Thinking Process & Product Development Stratergies</p>
+                        <p>Design Thinking Process & Product Development Stratergies - UDEMY</p>
                     </div>
                 </div>
                 <div class="card">
