--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p><b style="color: darkgreen; font-size: 25px;">></b> <b style="color: white; background-color: darkgreen; margin-left: 0.5%; margin-right: 1%; padding: 5px 10px 5px 10px; border-radius: 15px;"> present </b> : <b style="font-weight: bold;">Associate Software Engineer - Technology @ Virtusa </b></p>
                     </div>
                     <div style="margin-top: 1%;">
-                        <p style="margin-bottom: 1%; font-weight: bold;">Refer my Leadership skills in my LinkedIn Profile</p>
+                        <p style="margin-bottom: 1%; font-weight: bold;">Refer my Leadership skills in my <a style="text-decoration: none; color: darkblue;" href="">LinkedIn Profile</a></p>
                     </div>
                     <a href="https://drive.google.com/file/d/1dFimnWTr6Gs4H1mxM0pJaWR5YHQ2hmHX/view?usp=sharing">Download CV</a>
                 </div>
