--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p><b style="color: darkgreen; font-size: 25px;">></b> <b style="color: white; background-color: darkgreen; margin-left: 0.5%; margin-right: 1%; padding: 5px 10px 5px 10px; border-radius: 15px;"> present </b> : <b style="font-weight: bold;">Associate Software Engineer - Technology @ Virtusa </b></p>
                     </div>
                     <div style="margin-top: 1%;">
-                        <p style="margin-bottom: 1%; font-weight: bold;">Refer my Leadership skills in my <button style="text-decoration: none; outline: none; color: darkblue;" onclick="window.location='https://www.linkedin.com/in/gowtham-kittusamy-54b835174/'">LinkedIn Profile</button></p>
+                        <p style="margin-bottom: 1%; font-weight: bold;">Refer my Leadership skills in my <button style="text-decoration: none; border: none; background-color: none; font-weight: bolder; color: darkblue;" onclick="window.location='https://www.linkedin.com/in/gowtham-kittusamy-54b835174/'">LinkedIn Profile</button></p>
                     </div>
                     <a href="https://drive.google.com/file/d/1dFimnWTr6Gs4H1mxM0pJaWR5YHQ2hmHX/view?usp=sharing">Download CV</a>
                 </div>
