--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Please feel free to reach me anytime through the below mentioned sources...</p>
+                    <p>Please feel free to reach for any support or Project discussion any time through the below mentioned sources ... </p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
