--- a/index.html
+++ b/index.html
@@ -968,6 +968,7 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div>
                     <p>Please feel free to reach for any support or Project discussion any time through the below mentioned sources ... </p>
+                    <p>Open to Oppurtunities & Guidence <b>YES</b> </p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
