--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=14cVz6AGM99wMzLQF3h7t1KgidISOxXSs" alt="">
-                        <p>BootStrap 4 - UDEMY</p>
+                        <p>CSS3 - UDEMY</p>
                     </div>
                 </div>
                 <div class="card">
