--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <div class="scroll-up-btn">
+    <div style="margin-top: -10%" class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
     <nav class="navbar">
