--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
 
     <script src="script.js"></script>
     
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
              var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -1060,7 +1060,7 @@
              s1.setAttribute('crossorigin','*');
              s0.parentNode.insertBefore(s1,s0);
          })();
-    </script>
+    </script>-->
 
 </body>
 </html>
