--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="https://drive.google.com/uc?export=view&id=1EctLD4I90Fu7yx7PcfBhNyS4SFWHGwqd" alt="">
-                        <p>Stress Management - Relief from work stress and Life - UDEMY</p>
+                        <p>Stress Management - For Relief from stress of Life and Work- UDEMY</p>
                     </div>
                 </div>
                  <div class="card">
