--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div>
                     <p>Please feel free to reach for any support or Project discussion any time through the below mentioned sources ... </p>
-                    <p style="margin-top: 1.5%; font-weight: bolder;">Open to Oppurtunities & Guidence <small style="color: white; background-color: darkgreen; font-weight: bold; margin-left: 2%; margin-right: 1%; padding: 5px 40px 5px 40px; font-size: small; border-radius: 15px;">YES</small></p>
+                    <p style="margin-top: 1.5%; font-weight: bolder;">Open to Oppurtunities & Mentoring <small style="color: white; background-color: darkgreen; font-weight: bold; margin-left: 2%; margin-right: 1%; padding: 5px 40px 5px 40px; font-size: small; border-radius: 15px;">YES</small></p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
