--- a/index.html
+++ b/index.html
@@ -326,6 +326,23 @@
                         <div style="margin-top: 10px;" class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/HealthCareManagement'" class="viewbtn">View Repo</button>
                         <button onclick="window.location='https://drive.google.com/file/d/1XLYZud_s5uEGthhCetXTboMGEK7rz0xo/view?usp=sharing'" class="demobtn">Video Demo</button></div>
                     </div>
+                </div>               
+                 <div class="card">
+                    <div class="box">
+                        <img src="images/exam.jpg" alt="">
+                        <div class="text">Elearning Management</div>
+                        <p>an Elearning Management System which can facilitate to enroll and Learn courses, manage entire application.</p>
+                        <div style="margin-top: 10px;" class="buttons"><button onclick="window.location='https://github.com/gowthamrajk/ElearningManagementSystem'" class="viewbtn">View Repo</button>
+                        <button onclick="window.location='https://youtu.be/-s_-_Tz866w'" class="demobtn">Video Demo</button></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/todo.png" alt="">
+                        <div class="text">Career Navigator</div>
+                        <p>A Employee Info-store portal which can save details and manage empoyees, Line manager, HR manager.</p>
+                        <div style="margin-top: 10px;" class="buttons"><button onclick="window.location='https://youtu.be/1TDanfst0B8'" class="demobtn">Video Demo</button></div>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="box">
@@ -973,6 +990,26 @@
                             </div>
                         </div>
                         <p>QR Code Generator & Scanner</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div class="col-12 col-sm col-md-auto col-lg-auto">
+                            <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
+                                <iframe class="embed-responsive-item" src="https://youtu.be/1TDanfst0B8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <p>Career Navigator</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div class="col-12 col-sm col-md-auto col-lg-auto">
+                            <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
+                                <iframe class="embed-responsive-item" src="https://youtu.be/-s_-_Tz866w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <p>E-Learning Management System</p>
                     </div>
                 </div>
             </div>
