--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="box">
                         <img src="images/todo.png" alt="">
                         <div class="text">Career Navigator</div>
-                        <p>A Employee Info-store portal which can save details and manage empoyees, Line manager, HR manager.</p>
+                        <p>A Employee Info-store portal which can save and manage empoyees, Line manager, HR manager with security and role based authentications.</p>
                         <div style="margin-top: 10px;" class="buttons"><button onclick="window.location='https://youtu.be/1TDanfst0B8'" class="demobtn">Video Demo</button></div>
                     </div>
                 </div>
@@ -996,7 +996,7 @@
                     <div class="box">
                         <div class="col-12 col-sm col-md-auto col-lg-auto">
                             <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
-                                <iframe class="embed-responsive-item" src="https://youtu.be/1TDanfst0B8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1TDanfst0B8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <p>Career Navigator</p>
@@ -1006,7 +1006,7 @@
                     <div class="box">
                         <div class="col-12 col-sm col-md-auto col-lg-auto">
                             <div class="embed-responsive embed-responsive-16by9 iframe-youtube img-fluid">
-                                <iframe class="embed-responsive-item" src="https://youtu.be/-s_-_Tz866w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-s_-_Tz866w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <p>E-Learning Management System</p>
