--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <img src="images/todo.png" alt="">
                         <div class="text">Career Navigator</div>
                         <p>A Employee Info-store portal which can save and manage empoyees, Line manager, HR manager with security and role based authentications.</p>
-                        <div style="margin-top: 10px;" class="buttons"><button onclick="window.location='https://youtu.be/1TDanfst0B8'" class="demobtn">Video Demo</button></div>
+                        <div style="margin-top: 10px;" class="buttons"><button style="margin-top: 20px;" onclick="window.location='https://youtu.be/1TDanfst0B8'" class="demobtn">Video Demo</button></div>
                     </div>
                 </div>
                 <div class="card">
